<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AgendaORMLite</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="email">E-mail</string>
    <string name="salvar">Salvar</string>
    <string name="listaDeContato">Lista de contatos</string>
</resources>
